Fix up layout on mobile widths

--- a/app/styles/views/onboarding.scss
+++ b/app/styles/views/onboarding.scss
@@ -294,7 +294,6 @@ main {
   &-cost {
     display: flex;
     align-items: center;
-    padding-right: 20px;
   }
 
   &-price-group {
